--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ teloxide = { version = "0.13", features = ["macros"] }
 log = "0.4"
 pretty_env_logger = "0.5"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+dotenv = "0.15.0"
