--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - shell: bash
-        run: |
-          cargo install just
-          just init
-          just db-migrate
-      - uses: will-lynas/rust-check-ci@v0.2.0
+      - uses: will-lynas/rust-check-ci@main
