--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v2
 
-      # TODO: this has been archived
-      - uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: nightly
-          profile: minimal
-          override: true
           components: rustfmt, clippy
 
       - shell: bash
