Use just install in test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
       - shell: bash
         run: |
-          just ci
+          just install
           cargo sqlx prepare --check
           cargo fmt --check
           cargo check
