--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,10 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+  notify:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
       - uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
