Add emojis to telegram message

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
           message: |
             Quaestor deploy successful 🎉
 
-            Triggered by: ${{ github.actor }}
-            Commit message: ${{ github.event.commits[0].message }}
+            🥷 ${{ github.actor }}
+            💬 ${{ github.event.commits[0].message }}
