Use head commit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
             Quaestor deploy successful 🎉
 
             🥷 ${{ github.actor }}
-            💬 ${{ github.event.commits[0].message }}
+            💬 ${{ github.event.head_commit.message }}
