--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,7 @@ jobs:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: appleboy/telegram-action@master
+      - uses: will-lynas/deploy-notifications@main
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            Quaestor deploy successful 🎉
-
-            🥷 ${{ github.actor }}
-            💬 ${{ github.event.head_commit.message }}
